--- a/CORIN/requirements.txt
+++ b/CORIN/requirements.txt
@@ -1,9 +1,20 @@
-# Newer versions available
-
-#Mysql database connection
-cymysql
-django-cymysql
-
-#Restframework
-djangorestframework
-django-cors-headers
+cymysql==0.9.12
+datatransformer==1.0a1
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==2.0.4
+django-cors-headers==2.4.0
+django-cymysql==2.1.0
+django-filter==1.1.0
+django-toolbelt==0.0.1
+djangorestframework==3.8.2
+et-xmlfile==1.0.1
+gunicorn==19.9.0
+jdcal==1.3
+Markdown==2.6.11
+openpyxl==2.4.5
+psycopg2==2.7.5
+pytz==2018.4
+static3==0.7.0
+web.py==0.40.dev1
+xlwt==1.2.0
