NEW: promedio por directivos y no directivos en radial chart, MOD: servicio con los promedios para obtener los datos calculados directamente en lugar de calcularos en la vista

--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -28,6 +28,7 @@
         "vue": "^2.5.16",
         "vue-chartjs": "^3.3.1",
         "vue-i18n": "^8.1.0",
+        "vue-numeric": "^2.3.0",
         "vue-router": "^3.0.1",
         "vue-tables-2": "^1.4.70"
     },
