--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -25,6 +25,7 @@
         "flag-icon-css": "^3.0.0",
         "font-awesome": "^4.7.0",
         "simple-line-icons": "^2.4.1",
+        "vee-validate": "^2.1.0-beta.11",
         "vue": "^2.5.16",
         "vue-chartjs": "^3.3.1",
         "vue-i18n": "^8.1.0",
