--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -25,13 +25,16 @@
         "flag-icon-css": "^3.0.0",
         "font-awesome": "^4.7.0",
         "simple-line-icons": "^2.4.1",
+        "tiptap": "^0.19.0",
+        "tiptap-extensions": "^0.21.0",
         "vee-validate": "^2.1.0-beta.11",
         "vue": "^2.5.16",
         "vue-chartjs": "^3.3.1",
         "vue-i18n": "^8.1.0",
         "vue-numeric": "^2.3.0",
         "vue-router": "^3.0.1",
-        "vue-tables-2": "^1.4.70"
+        "vue-tables-2": "^1.4.70",
+        "vue-trix": "^0.4.0"
     },
     "devDependencies": {
         "autoprefixer": "^8.5.0",
