--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -52,17 +52,17 @@
         "chai": "^4.1.2",
         "chalk": "^2.4.1",
         "chromedriver": "^2.38.3",
+        "connect-history-api-fallback": "1.5.0",
         "copy-webpack-plugin": "^4.5.1",
         "cross-env": "^5.1.5",
         "cross-spawn": "^6.0.5",
-        "connect-history-api-fallback": "1.5.0",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
         "eslint-config-standard": "^11.0.0",
         "eslint-friendly-formatter": "^4.0.1",
         "eslint-loader": "^2.0.0",
-        "eslint-plugin-import": "^2.11.0",
         "eslint-plugin-html": "^4.0.3",
+        "eslint-plugin-import": "^2.11.0",
         "eslint-plugin-node": "^6.0.1",
         "eslint-plugin-promise": "^3.7.0",
         "eslint-plugin-standard": "^3.1.0",
@@ -85,6 +85,7 @@
         "mocha": "^5.1.1",
         "nightwatch": "^0.9.21",
         "node-notifier": "^5.2.1",
+        "node-sass": "^4.9.0",
         "optimize-css-assets-webpack-plugin": "^3.2.0",
         "ora": "^2.1.0",
         "phantomjs-prebuilt": "^2.1.16",
@@ -93,6 +94,7 @@
         "postcss-loader": "^2.1.5",
         "postcss-url": "^7.3.2",
         "rimraf": "^2.6.2",
+        "sass-loader": "^7.0.1",
         "selenium-server": "^3.12.0",
         "semver": "^5.5.0",
         "shelljs": "^0.8.2",
@@ -105,10 +107,9 @@
         "vue-template-compiler": "^2.5.16",
         "webpack": "^3.12.0",
         "webpack-bundle-analyzer": "^2.11.3",
+        "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^2.11.2",
-        "webpack-merge": "^4.1.2",
-        "node-sass": "^4.9.0",
-        "sass-loader": "^7.0.1"
+        "webpack-merge": "^4.1.2"
     },
     "engines": {
         "node": ">= 8.9.4",
