REFACTOR: Se ajusta estructura del proyecto para dar mejor organizacion l proyecto

--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -38,6 +38,7 @@
         "vue-trix": "^0.4.0"
     },
     "devDependencies": {
+        "@vuese/cli": "^2.3.1",
         "autoprefixer": "^8.5.0",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.3",
@@ -106,6 +107,7 @@
         "vue-loader": "^14.2.2",
         "vue-style-loader": "^4.1.0",
         "vue-template-compiler": "^2.5.16",
+        "vuese": "^1.4.7",
         "webpack": "^3.12.0",
         "webpack-bundle-analyzer": "^2.11.3",
         "webpack-cli": "^3.1.2",
