--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -29,13 +29,15 @@
         "tiptap-extensions": "^0.21.0",
         "vee-validate": "^2.1.0-beta.11",
         "vue": "^2.5.16",
+        "vue-axios": "^2.1.4",
         "vue-chartjs": "^3.3.1",
         "vue-i18n": "^8.1.0",
         "vue-json-excel": "^0.2.96",
         "vue-numeric": "^2.3.0",
         "vue-router": "^3.0.1",
         "vue-tables-2": "^1.4.70",
-        "vue-trix": "^0.4.0"
+        "vue-trix": "^0.4.0",
+        "vuex": "^3.1.1"
     },
     "devDependencies": {
         "@vuese/cli": "^2.3.1",
