--- a/frontendcorin/package.json
+++ b/frontendcorin/package.json
@@ -18,6 +18,8 @@
     },
     "dependencies": {
         "@amcharts/amcharts4": "^4.0.0-beta.51",
+        "@ckeditor/ckeditor5-build-classic": "^12.3.1",
+        "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
         "axios": "^0.18.0",
         "bootstrap": "^4.1.1",
         "bootstrap-vue": "^2.0.0-rc.9",
